[gd_scene load_steps=30 format=3 uid="uid://mgefkek60rmx"]

[ext_resource type="Script" uid="uid://fhvvxtuvqsqd" path="res://scenes/mob/mob.gd" id="1_c2o0r"]
[ext_resource type="Script" uid="uid://bj2kuesletu0j" path="res://scenes/components/health.gd" id="2_feath"]
[ext_resource type="Texture2D" uid="uid://c0ptkh3ukgj5a" path="res://assets/visual/enemies/turret-Sheet.png" id="2_nnm6l"]
[ext_resource type="Script" uid="uid://b6w5l21fecgju" path="res://scenes/components/hurtbox.gd" id="3_w5ba3"]
[ext_resource type="AudioStream" uid="uid://b5yljpyjsd6oc" path="res://assets/audio/sound-effects/Bigbooms4.mp3" id="5_fhx6o"]
[ext_resource type="Script" uid="uid://cadh1n1g4w666" path="res://scenes/components/hitbox.gd" id="5_kk3ds"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nnm6l"]
atlas = ExtResource("2_nnm6l")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wvav"]
atlas = ExtResource("2_nnm6l")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8efk"]
atlas = ExtResource("2_nnm6l")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_udbnv"]
atlas = ExtResource("2_nnm6l")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpbap"]
atlas = ExtResource("2_nnm6l")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq56n"]
atlas = ExtResource("2_nnm6l")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk3ds"]
atlas = ExtResource("2_nnm6l")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhx6o"]
atlas = ExtResource("2_nnm6l")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a8ii"]
atlas = ExtResource("2_nnm6l")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q52e7"]
atlas = ExtResource("2_nnm6l")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyl3q"]
atlas = ExtResource("2_nnm6l")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5yut"]
atlas = ExtResource("2_nnm6l")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iba42"]
atlas = ExtResource("2_nnm6l")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqhch"]
atlas = ExtResource("2_nnm6l")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpto6"]
atlas = ExtResource("2_nnm6l")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_puduw"]
atlas = ExtResource("2_nnm6l")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj1ul"]
atlas = ExtResource("2_nnm6l")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl36c"]
atlas = ExtResource("2_nnm6l")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcvnn"]
atlas = ExtResource("2_nnm6l")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpt7x"]
atlas = ExtResource("2_nnm6l")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4c5e"]
atlas = ExtResource("2_nnm6l")
region = Rect2(320, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vldki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnm6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wvav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8efk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udbnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpbap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq56n")
}],
"loop": true,
"name": &"die",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk3ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhx6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q52e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyl3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5yut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iba42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqhch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpto6")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_puduw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj1ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl36c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcvnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpt7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4c5e")
}],
"loop": true,
"name": &"shoot",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nnm6l"]
radius = 42.0
height = 122.0

[node name="Mob" type="RigidBody2D" node_paths=PackedStringArray("boom")]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_c2o0r")
boom = NodePath("HurtBox/AudioStreamPlayer2D")
metadata/_edit_group_ = true

[node name="Health" type="Node" parent="."]
script = ExtResource("2_feath")
max_health = 1
metadata/_custom_type_script = "uid://bj2kuesletu0j"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -6.28319
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vldki")
animation = &"shoot"
autoplay = "idle"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nnm6l")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_w5ba3")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://b6w5l21fecgju"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HurtBox"]
stream = ExtResource("5_fhx6o")
volume_db = 24.0
bus = &"Sound Effects"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_nnm6l")
debug_color = Color(0.85798, 0.998061, 0, 0.42)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("5_kk3ds")
metadata/_custom_type_script = "uid://cadh1n1g4w666"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_nnm6l")
debug_color = Color(0.942852, 0.0848162, 0.556527, 0.42)

[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
